--- a/package.json
+++ b/package.json
@@ -2,10 +2,21 @@
   "name": "naught",
   "version": "0.2.1",
   "description": "zero downtime deployment for your node.js server",
-  "keywords": ["zero", "downtime", "uptime", "deploy", "deployment", "unicorn", "forever", "cluster", "daemon", "daemonize"],
+  "keywords": [
+    "zero",
+    "downtime",
+    "uptime",
+    "deploy",
+    "deployment",
+    "unicorn",
+    "forever",
+    "cluster",
+    "daemon",
+    "daemonize"
+  ],
   "scripts": {
     "dev": "npm install && coke watch",
-    "test": "node test/test.js"
+    "test": "mocha"
   },
   "bin": {
     "naught": "./lib/main.js"
@@ -20,7 +31,8 @@
     "node": "~0.8.2"
   },
   "devDependencies": {
-    "coco": "~0.8.1"
+    "coco": "~0.8.1",
+    "mocha": "~1.5.0"
   },
   "dependencies": {
     "async": "~0.1.22",
